# trueform

./: CMakeLists.txt  README.md  trueformConfig.cmake.in
examples/: CMakeLists.txt  build_tree.cpp  injections.cpp  nearness_search_tree_by_primitive.cpp  nearness_search_tree_by_tree.cpp  query_on_primitives.cpp  range_manipulation.cpp  search_tree_by_primitive.cpp  search_tree_by_self.cpp  search_tree_by_tree.cpp  search_tree_by_tree_collision.cpp
examples/nanoflann/: CMakeLists.txt  closest_point.cpp
examples/util/: read_mesh.hpp
examples/vtk/: CMakeLists.txt  interactive.cpp  positioning.cpp
examples/vtk/util/: common.hpp  data_bridge.hpp
include/trueform/: aabb.hpp  aabb_from.hpp  aabb_metrics.hpp  aabb_union.hpp  assign_if.hpp  block_indirect_range.hpp  blocked_range.hpp  borrowed_data.hpp  buffer.hpp  circular_decrement.hpp  circular_increment.hpp  closest_metric_point.hpp  closest_metric_point_pair.hpp  closest_point.hpp  closest_point_on_triangle.hpp  closest_point_pair.hpp  closest_point_parametric.hpp  contains_coplanar_point.hpp  contains_point.hpp  cross.hpp  distance.hpp  dot.hpp  dyn_model.hpp  epsilon_inverse.hpp  form.hpp  frame.hpp  frame_view.hpp  identity_frame.hpp  identity_transformation.hpp  indirect_range.hpp  inject_id.hpp  inject_ids.hpp  inject_normal.hpp  inject_plane.hpp  intersect_status.hpp  intersects.hpp  invert_map_with_nones.hpp  inverted.hpp  line.hpp  local_value.hpp  (+87 more)
include/trueform/implementation/: blocked_iterator.hpp  build_tree_nodes.hpp  dereference_policy.hpp  indirect_iterator.hpp  inject_plane.hpp  invert_matrix_2x2.hpp  invert_matrix_3x3.hpp  iterator_utils.hpp  line_line_check.hpp  local_tree_metric_result.hpp  mapped_iterator.hpp  math_config.hpp  max_nodes_in_tree.hpp  neighbor_search.hpp  point_iterator.hpp  ray_aabb_check.hpp  search.hpp  small_vector.hpp  sphere_distance.hpp  stride_iterator_api.hpp  tree_closest_point.hpp  tree_closest_point_pair.hpp  tree_closest_point_using_sort_by_level.hpp  tree_dual_search.hpp  tree_metric_result.hpp  tree_ray_cast.hpp  tree_ray_info.hpp  tree_search.hpp  tree_self_search.hpp  tree_tree_proximity.hpp  tree_tree_proximity_parallel.hpp  value_iterator.hpp
papers/tree/: references.bib
papers/tree/latex/: abstract.tex  conclusions.tex  definitions.tex  evaluations.tex  introduction.tex  main.tex  methodology.tex  preamble.tex  related_work.tex
papers/tree/latex/algorithms/: dual-search.tex  tree-construction.tex
papers/tree/latex/figures/: ftime-matrix.tex  lib-comparison.tex  partitions.tex  query-dists.tex  self-search.tex  stack.tex  tree-build-solo.tex  tree.tex
papers/tree/latex/tables/: tree-tree.tex
